--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - 1433:1433
     volumes:
       - "./backups:/var/backups"
-      - sql-server-volume2:/var/opt/mssql
+      - sql-server-volume:/var/opt/mssql
 
   mysql:
     image: mysql:latest
